# Sovaccines

./: CMakeLists.txt  README.md  SOVACCINES  Sovacinnes  ads.c  config.txt  log_file  makefile  sovaccines  stats_file  tempMain  tempMain.c  test_linux.c  teste  testeLog  testeStats
funcoes/: client_get_operation.c  client_process_answer.c  client_process_operation.c  client_receive_answer.c  client_send_operation.c  create_dynamic_memory.c  create_dynamic_memory_buffers.c  create_request.c  create_shared_memory.c  create_shared_memory_buffers.c  destroy_dynamic_memory.c  destroy_shared_memory.c  execute_client.c  execute_proxy.c  execute_server.c  launch_process.c  main_args.c  memory-private.h  proxy_forward_operation.c  proxy_process_operation.c  proxy_receive_operation.c  read_answer.c  read_circular_buffer.c  read_rnd_access_buffer.c  semaphore_create.c  server_process_operation.c  server_receive_operation.c  server_send_answer.c  stop_execution.c  user_interaction.c  wait_process.c  wait_processes.c  write_circular_buffer.c  write_rnd_access_buffer.c  write_statistics.c
include/: client.h  configuration.h  log.h  main.h  memory-private.h  memory.h  process.h  proxy.h  server.h  sosignal.h  sotime.h  stats.h  synchronization.h
projeto1-headers/: client.h  main.h  memory-private.h  memory.h  process.h  proxy.h  server.h  synchronization.h
src/: client.c  configuration.c  log.c  main.c  memory.c  process.c  proxy.c  server.c  sosignal.c  sotime.c  sovacinnes.c  stats.c  synchronization.c  teste  teste.c
